fix(theme): Improve styling of popout composer in dark mode

--- a/static/workspace.less
+++ b/static/workspace.less
@@ -144,6 +144,7 @@ body.is-blurred {
   }
   .sheet-toolbar-container {
     background-image: -webkit-linear-gradient(top, lighten(@toolbar-background-color, 14%), lighten(@toolbar-background-color, 14%));
+
     .btn.btn-toolbar {
       background: none;
       img { opacity:0.5; }
@@ -159,6 +160,7 @@ body.is-blurred {
 .sheet-toolbar-container {
   background-image: -webkit-linear-gradient(top, lighten(@toolbar-background-color, 9%), @toolbar-background-color);
   box-shadow: inset 0 1px 0 lighten(@toolbar-background-color, 15%);
+  color:@text-color-heading;
 }
 
 .layout-mode-popout {
